@@ -1,5 +1,12 @@
 $Id$
 
+2015-11-07  Christian Franke  <franke@computer.org>
+
+	drivedb.h:
+	- Micron M500DC/M510DC Enterprise SSDs: Rename, add M510DC
+	- SandForce Driven SSDs: Mushkin Chronos 7mm/MX/G2, Enhanced ECO2
+	- SiliconMotion based SSDs: Crucial BX100 (ticket #597)
+
 2015-10-31  Christian Franke  <franke@computer.org>
 
 	atacmds.cpp, atacmds.h, knowndrives.cpp, knowndrives.h:
